--- a/package.json
+++ b/package.json
@@ -1,46 +1,11 @@
 {
-  "name": "@bramblex/state-model",
-  "version": "0.0.3",
-  "description": "Simple model for react",
-  "homepage": "https://github.com/bramblex/state-model",
-  "main": "dist/state-model.cjs.js",
-  "module": "dist/state-model.es.js",
-  "types": "dist/state-model.d.ts",
-  "author": "bramblex<qjnight@gmail.com>",
-  "license": "MIT",
-  "files": [
-    "dist/*"
-  ],
+  "name": "root",
+  "private": true,
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-react": "^7.13.13",
-    "@rollup/plugin-babel": "^5.2.2",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.1.0",
-    "@rollup/plugin-typescript": "^8.1.0",
-    "@types/jest": "^26.0.22",
-    "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "babel-jest": "^26.6.3",
-    "camelcase": "^6.2.0",
-    "eslint": "^7.25.0",
-    "jest": "^26.6.3",
-    "react": "^17.0.2",
-    "react-test-renderer": "^17.0.2",
-    "rollup": "^2.38.0",
-    "rollup-plugin-dts": "^3.0.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "ts-jest": "^26.4.4",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "lerna": "^4.0.0"
   },
-  "scripts": {
-    "build": "rollup -c",
-    "lint": "eslint --fix 'src/**/*.ts'"
-  },
-  "dependencies": {
-    "@types/react": "^17.0.3"
-  }
+  "workspaces": [
+    "packages/@bramblex/state-model",
+    "packages/@bramblex/state-model-react"
+  ]
 }
