--- a/packages/@bramblex/state-model-react/tsconfig.json
+++ b/packages/@bramblex/state-model-react/tsconfig.json
@@ -7,5 +7,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
+    "moduleResolution": "node"
   }
 }
