--- a/packages/@bramblex/state-model/tsconfig.json
+++ b/packages/@bramblex/state-model/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "esnext",
+    "module": "es6",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
