--- a/packages/@bramblex/state-model-react/tsconfig.json
+++ b/packages/@bramblex/state-model-react/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "es6",
+    "target": "es6",
+    "module": "esnext",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
