--- a/packages/@bramblex/state-model-react/package.json
+++ b/packages/@bramblex/state-model-react/package.json
@@ -42,7 +42,8 @@
   },
   "dependencies": {
     "@bramblex/state-model": "^1.0.3",
-    "@types/react": "^17.0.3"
+    "@types/react": "^17.0.3",
+    "use-sync-external-store": "^1.2.0"
   },
   "gitHead": "d07bbd6f87bac044201cf349a0bcfde0789fc244",
   "publishConfig": {
