--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "bramblex<qjnight@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^19.0.10",
     "typescript": "^5.8.2"
   },
   "peerDependencies": {
